# newsletter

./: .env  .gitignore  CNAME  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  README.md  diesel.toml  docker-compose.prod.yml  docker-compose.yml  fix-image-urls.sh  nginx.conf  package-lock.json  package.json  setup-local-images.sh  setup-minio-policy.sh
.github/workflows/: deploy.yml  jokes-summary.yml  package.yaml
.shuttle/: config.toml
Frontend/newsletter-frontend/: package-lock.json  package.json  tailwind.config.js
backend/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  diesel.toml  package-lock.json
backend/src/: main.rs
backend/src/auth/: authentication.rs  errors.rs  mod.rs
backend/src/database/: mod.rs  model.rs  queries.rs  schema.rs
backend/src/database/2024-12-31-221109_migrations/: up.sql
backend/src/web/: errors.rs  mod.rs  posts.rs  subscribe.rs
frontend/: .env  Dockerfile  Dockerfile.prod  dockerfile  env.example  index.html  nginx-docker.conf  nginx-http-only.conf  nginx-https.conf  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: robots.txt  site.webmanifest  sitemap.xml
new_frontend_module/: .gitignore  .htaccess  composer.json  pint.json
newsletter/: dockerfile
newsletterchart/: Chart.yaml  values.yaml
ractconf/: app.js  index.html  speakers.json  style.css
scripts/: deploy-with-ssl.sh  rollback.sh  ssl-setup.sh  switch-nginx-config.sh
src/: lib.rs  main.rs
src/auth/: errors.rs  (+2 more)
(+1243 files in other folders)
